# neuroweave

./: .env.example  .gitignore  AGENTS_IMPLEMENTATION.html  CLAUDE.md  Makefile  README.md  TECHNICAL_ARCHITECTURE.html  TECHNICAL_ARCHITECTURE.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
api/: CLAUDE.md  celery_app.py  config.py  deps.py  main.py
api/db/: __init__.py  session.py
api/models/: __init__.py  article.py  channel.py  consent.py  dataset_export.py  message.py  server.py  thread.py
api/routers/: articles.py  auth.py  consent.py  datasets.py  github.py  search.py  servers.py  webhooks.py
api/schemas/: article.py  consent.py  dataset.py  github.py  server.py
api/services/: CLAUDE.md  anonymizer.py  c2pa_signer.py  consent_checker.py  embeddings.py  github_fetcher.py
api/tasks/: export_dataset.py  fetch_github_discussions.py  generate_article.py  process_messages.py
bot/: CLAUDE.md  channel_sync.py  main.py  stream_producer.py
bot/cogs/: consent.py  listener.py  search.py
infra/: CLAUDE.md  Dockerfile.api  Dockerfile.bot  Dockerfile.web
infra/nginx/: nginx.conf
scripts/: fetch_github.py  register_server.py  seed.py  seed_github.py
tests/: conftest.py
tests/api/: conftest.py  test_articles.py  test_auth.py  test_consent.py  test_datasets.py  test_github.py  test_search.py
tests/bot/: conftest.py  test_commands.py  test_listener.py  test_stream_producer.py
tests/pipeline/: test_anonymizer.py  (+11 more)
web/: CLAUDE.md  package-lock.json  package.json  tailwind.config.ts
(+36 files in other folders)
